--- a/src/application/Core/configs/application.ini
+++ b/src/application/Core/configs/application.ini
@@ -1,5 +1,16 @@
 [production]
 
+phpSettings.memory_limit = 256M
+phpSettings.display_errors = 0
+
+resources.frontController.defaultModule = Core
+resources.frontController.prefixDefaultModule = true
+resources.frontController.moduleDirectory = APP_PATH
+resources.frontController.controllerDirectory = APP_PATH "/Core/controllers"
+
 [development:production]
+
+phpSettings.display_errors = 1
+
 [testing:production]
 [staging:production]
