--- a/src/application/Core/configs/application.ini
+++ b/src/application/Core/configs/application.ini
@@ -8,6 +8,10 @@ resources.frontController.prefixDefaultModule = true
 resources.frontController.moduleDirectory = APP_PATH
 resources.frontController.controllerDirectory = APP_PATH "/Core/controllers"
 
+resources.layout.layoutPath = APP_PATH "/Core/views/layouts"
+
+config[] = APP_PATH "/Core/configs/route.ini"
+
 [development:production]
 
 phpSettings.display_errors = 1
