--- a/src/public/.htaccess
+++ b/src/public/.htaccess
@@ -1,7 +1,7 @@
 SetEnv APPLICATION_ENV development
 
 <ifModule mod_rewrite.c>
-    Options +FollowSymlinks
+    Options +FollowSymlinks -Multiviews
     RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
